# oxideav-h261

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml
benches/: annex_d.rs  bch.rs  decode.rs  encode.rs  filter_mc.rs  quant.rs  start_code.rs  transform.rs
fuzz/: Cargo.toml
fuzz/corpus/decode_bch_multiframe/: below_lock_window_two_multiframes.bch  payload_400bit_pad_to_three_multiframes.bch  payload_42_shifted_4bits.bch  payload_5a_six_multiframes.bch  payload_c3_one_bit_flip.bch  payload_c3_three_multiframes.bch  payload_zeros_three_multiframes.bch  stuffing_one_multiframe.bch  stuffing_three_multiframes.bch
fuzz/corpus/decode_h261/: cif_intra_q12.h261  cif_intra_then_inter_q15.h261  qcif_intra_q31.h261  qcif_intra_q8.h261  qcif_intra_then_inter_q10.h261
fuzz/corpus/parse_rtcp_compound/: app_ping.rtcp  bye_with_reason.rtcp  compound_rr_sdes_bye.rtcp  compound_sr_sdes_app.rtcp  empty_rr.rtcp  rr_two_blocks.rtcp  sdes_cname.rtcp  sr_no_blocks.rtcp  sr_one_block.rtcp
fuzz/corpus/parse_rtp_payload/: adversarial_cc15_truncated.rtp  adversarial_version_1.rtp  fixed_header_only_12B.rtp  fixed_plus_h261_empty_tail_16B.rtp  fixed_plus_h261_gob_aligned.rtp  fixed_with_15_csrcs.rtp  fixed_with_3_csrcs.rtp  h261_header_typical_fields.rtp  h261_marker_zero_midframe.rtp
fuzz/corpus/parse_sdp_fmtp/: 01_rtpmap_canonical.txt  02_rtpmap_dynamic_pt.txt  03_fmtp_spec_example.txt  04_fmtp_qcif_only.txt  05_fmtp_unknown_param.txt  06_fmtp_lowercase_keys.txt  07_negotiate_split.txt  08_negotiate_rfc2032_fallback.txt  09_malformed_mpi_out_of_range.txt  10_rtpmap_other_codec_rejected.txt  11_rtpmap_non_90000_clock_rate.txt  12_fmtp_qcif_preferred_first.txt  13_fmtp_no_picture_size_strict_rejects.txt  14_fmtp_value_both_sizes_d0.txt
fuzz/fuzz_targets/: decode_bch_multiframe.rs  decode_h261.rs  packetize_h261.rs  parse_rtcp_compound.rs  parse_rtp_payload.rs  parse_sdp_fmtp.rs
src/: annex_c.rs  annex_d.rs  bch.rs  block.rs  decoder.rs  encoder.rs  fdct.rs  gob.rs  hrd.rs  idct.rs  lib.rs  mb.rs  multipoint.rs  picture.rs  quant.rs  rtcp.rs  rtp.rs  sdp.rs  start_code.rs  tables.rs
tests/: annex_c_e2e.rs  annex_d.rs  bch_e2e.rs  conceal_e2e.rs  dos_limits.rs  ffmpeg_conformance.rs  ffmpeg_roundtrip.rs  freeze_e2e.rs  fuzz_seed_corpus.rs  fuzz_seed_corpus_bch.rs  fuzz_seed_corpus_packetize.rs  fuzz_seed_corpus_rtcp.rs  fuzz_seed_corpus_rtp.rs  fuzz_seed_corpus_sdp.rs  hrd_e2e.rs  idct_annex_a.rs  reference_clip.rs  rtp_e2e.rs
