[package]
name = "oxideav-h261"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h261"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T H.261 video decoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-h261"
keywords = ["multimedia", "video", "h261", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
