[package]
name = "oxideav-h261"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-h261"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T H.261 video decoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-h261"
keywords = ["multimedia", "video", "h261", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"

[dev-dependencies]
# Round 175 (depth-mode benchmarks): Criterion drives three bench
# harnesses (`transform`, `encode`, `decode`) that future codec
# rounds use to A/B their algorithm tweaks. Pinned to the same 0.5
# line the other OxideAV crates with benches (tta, flac, magicyuv,
# huffyuv, h264, prores) already track.
criterion = "0.5"

# Round 175 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained: every YUV source frame is synthesised in-bench
# from a deterministic xorshift seed plus a striped pattern (no
# committed fixtures, no on-disk testsrc, no ffmpeg call). The
# encode benches drive the production `encode_intra_picture` /
# `encode_inter_picture` paths; the decode benches first run the
# encoder to produce a real elementary stream, then feed it through
# `H261Decoder::send_packet` + `receive_frame`. Run with:
#     cargo bench -p oxideav-h261 --bench <name>
[[bench]]
name = "transform"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

# Round 233 — BCH (511, 493) §5.4 FEC layer bench. Round 230 added
# the §5.4.1 single-bit correction path (`locate_single_error`,
# `decode_multiframe_with_correction`); this bench gives that hot
# path plus the existing detection-only encode/decode flow an A/B
# baseline alongside the transform / encode / decode benches.
[[bench]]
name = "bch"
harness = false

# Round 238 — §4.1 / §4.2 start-code scanner bench. The bit-level
# scanner (`find_next_start_code_bits`, `find_next_start_code`,
# `iter_start_codes`) sits on the inner loop of every
# `H261Decoder::send_packet`, every `rtp::packetize_gob_aligned`,
# and the spec-mandated RFC 4587 §4 `rtp::depacketize` sanity
# check. This bench gives the eventual SIMD pre-scan / table-driven
# byte-aligned shortcut an A/B baseline alongside the BCH /
# transform / encode / decode benches.
[[bench]]
name = "start_code"
harness = false

# Round 287 — §3.2.3 loop filter + §3.2.2 integer-pel motion-comp
# bench. The `transform` bench covers the inner (I)DCT; this one
# isolates the two other per-block P-picture reconstruction
# primitives (`mb::apply_loop_filter`, `mb::copy_block_integer`) that
# the decoder runs on every coded P-block and that the fuzzer's
# `decode_h261` target drives. Gives a SIMD filter / branchless
# edge-clamp copy an A/B baseline alongside the transform / bch /
# start_code / encode / decode benches.
[[bench]]
name = "filter_mc"
harness = false

# Round 320 — Annex D §D.2 / Figure D.1 still-image transform bench.
# Every other bench measures per-8×8-block work or the end-to-end
# picture cost; none measured the whole-plane 2:1×2:1 sub-sample /
# re-assembly that runs when an endpoint sends a still image
# (HI_RES = 0). `subsample_plane` gathers every other sample of a
# 352×288 (QCIF endpoint) or 704×576 (CIF endpoint) still-image plane
# into four sub-images; `reassemble_plane` scatters them back. This
# bench gives those bandwidth-bound interleave / deinterleave paths —
# and their YUV-4:2:0 wrappers `subsample_still_image` /
# `reassemble_still_image` — an A/B baseline alongside the transform /
# filter_mc / bch / start_code / encode / decode benches.
[[bench]]
name = "annex_d"
harness = false

# Round 336 — §3.2.5 / §4.2.4 (de)quantisation leaf-primitive bench.
# `transform` covers the inner (I)DCT and `filter_mc` covers the P-block
# reconstruction primitives, but neither isolated the per-coefficient
# (de)quantiser the encoder and decoder run on every transmitted DCT
# coefficient: `block::dequant_ac` (decode, QUANT-parity branch — the
# fuzzer's `decode_h261` target reaches it), `quant::quant_ac` (encode
# forward AC quantiser with the central dead-zone), and
# `quant::quant_intra_dc` (the §3.2.5 Table 6 INTRA-DC quantiser with the
# forbidden-code / special-1024 search). Gives a branchless-parity dequant
# / reciprocal-multiply forward quantiser an A/B baseline alongside the
# transform / filter_mc / annex_d / bch / start_code / encode / decode
# benches.
[[bench]]
name = "quant"
harness = false
