[package]
name = "oxideav-h261-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# H.261's decoder is the part worth fuzzing: a 20-bit picture start
# code (PSC) plus a 6-bit PTYPE selects QCIF (176x144) or CIF
# (352x288); an inner sequence of 16-bit GBSC + 4-bit GN + 5-bit
# GQUANT GOB headers walks the macroblock layer, whose MBA / MTYPE
# (with MQUANT / MVD / CBP variants) / CBP VLCs and TCOEFF VLC +
# 20-bit escape drive an attacker-controlled IDCT / motion-comp /
# loop-filter chain. The PSC / GBSC scanner, every VLC table, the
# §4.2.3.4 MV predictor reset rules, the §3.2.3 loop filter, the
# integer-pel motion-compensation indexing, and the inverse 8x8 IDCT
# all consume bytes whose shape the fuzzer can dictate. There is no
# external library oracle worth pulling in (the clean-room wall bars
# any reference codec source anyway), so this fuzz crate is
# decode-only: feed arbitrary bytes through `H261Decoder::send_packet`
# / `receive_frame` / `flush` and assert the calls always return a
# `Result` rather than panicking, aborting, integer-overflowing (in a
# debug / ASAN build), indexing out of bounds, or OOMing.
[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"

[dependencies.oxideav-h261]
path = ".."

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_h261"
path = "fuzz_targets/decode_h261.rs"
test = false
doc = false

# Second fuzz target — the RTCP control-channel parser surface (RFC 3550
# §6). RTCP packets arrive from a peer on the network; their bytes are
# attacker-controlled. Each sub-packet's 16-bit `length` field governs the
# walk advance, every SDES / BYE / APP item carries 8-bit-length-prefixed
# text the parser must bound-check, and the compound packet is a self-
# delimiting stream of these sub-packets. This is exactly the shape a
# parser is most likely to mis-implement, so it gets its own target
# distinct from the elementary-stream decode_h261 target.
[[bin]]
name = "parse_rtcp_compound"
path = "fuzz_targets/parse_rtcp_compound.rs"
test = false
doc = false

# Third fuzz target — the H.261 §5.4 BCH (511, 493) FEC multiframe
# parser. The framing layer is the second attacker-reachable media
# parser an H.261 endpoint exposes (the first is the elementary-stream
# decoder). Its lock-search loop sweeps 511 candidate bit offsets times
# 24 framing-bit reads; once locked, every frame's 18-bit syndrome is
# checked against the §5.4.2 generator polynomial and the inner 492
# data bits are concatenated into the recovered stream. This target
# drives `decode_multiframe` / `parity18` / `syndrome18` against raw
# attacker bytes AND against an error-injection scenario where a
# well-formed framed stream is corrupted by attacker-chosen bit-flips
# before re-decoding.
[[bin]]
name = "decode_bch_multiframe"
path = "fuzz_targets/decode_bch_multiframe.rs"
test = false
doc = false

# Fourth fuzz target — the RTP data-path parsers an endpoint runs on
# every received UDP datagram before any H.261 bitstream layer sees a
# byte. Drives `parse_rtp_fixed_header` (RFC 3550 §5.1: V / P / X / CC /
# M / PT / seq / ts / SSRC + 0..=15 CSRC entries, bounds-checked
# against an attacker-controlled CC field), `unpack_header` (RFC 4587
# §4.1: 4-byte H.261 RTP payload header with SBIT / EBIT / I / V /
# GOBN / MBAP / QUANT / HMVD / VMVD), and `depacketize` (multi-packet
# bit-walker that honours per-packet SBIT/EBIT alignment and asserts
# the recovered elementary stream contains a start code). The §4.1
# header arrives from the network on every video packet; this target
# is distinct from the three other fuzz surfaces (elementary-stream,
# RTCP control channel, BCH FEC framing).
[[bin]]
name = "parse_rtp_payload"
path = "fuzz_targets/parse_rtp_payload.rs"
test = false
doc = false

# Fifth fuzz target — the SDP signalling parsers an endpoint runs on
# every received Session Description Protocol offer or answer at
# session setup before any RTP / RTCP / H.261 layer sees a byte.
# Drives `parse_rtpmap` (RFC 4587 §6.2: `a=rtpmap:<pt> H261/90000`
# with case-insensitive encoding-name match, payload-type and
# clock-rate integer bounds), `parse_fmtp` (RFC 4587 §6.2:
# `a=fmtp:<pt> CIF=…;QCIF=…;D=…` with payload-type match),
# `H261FmtpParams::parse_value` (RFC 4587 §6.1.1: semicolon-separated
# key=value list with CIF/QCIF MPI ∈ 1..=4 and D ∈ {0,1} validation,
# duplicate-parameter rejection, forward-compatible unknown-parameter
# skip), and `negotiate_answer` (RFC 4587 §6.2.1 offer/answer rules:
# per-shared-size `max(MPI)` upper bound, RFC 2032 QCIF=1 fallback
# for an offer with no picture size, both-sides-required Annex-D
# survival). SDP arrives over SIP / WebRTC / RTSP at session setup;
# this target is distinct from the four other fuzz surfaces
# (elementary-stream, RTCP control channel, BCH FEC framing, RTP
# wire format).
[[bin]]
name = "parse_sdp_fmtp"
path = "fuzz_targets/parse_sdp_fmtp.rs"
test = false
doc = false
